<resources>
    <string name="app_name">HealthyBites</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">0ou4FU2EEx08px1NG3YxiirZbxbtvpWtJHbD8Npl</string>
    <string name="back4app_client_key">wlBd4PrYq7MPbTbeDhCYopQ1M7wpCccaK8KIpU7r</string>
    <string name="log_out">Log Out</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="dietary_preferences">Diet:</string>
    <string name="email">Email:</string>
    <string name="age">Age:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_email">Change Email</string>
    <string name="add_age">Add Age</string>
    <string name="add_weight">Add Weight</string>
    <string name="add_height">Add Height</string>
    <string name="add_diet">Add Diet</string>
    <string name="submit">Submit</string>
    <string name="change_username">Change Username</string>
    <string name="transform_your_life">Transform Your Life</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="log_in">Log In</string>
    <string name="start_your_path_to_a_new_diet_with_this_simple_to_use_healthy_recipe_app">Start your path to a new diet with this simple to use healthy recipe app</string>
    <string name="healthy_bites">Healthy Bites</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password</string>


</resources>