<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:background="@drawable/gradiant_background"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".StartUpActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="103dp"
        android:fontFamily="@font/blackjack"
        android:text="@string/healthy_bites"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivStartImage"
        android:layout_width="377dp"
        android:layout_height="234dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName"
        app:srcCompat="@drawable/foodimage" />

    <TextView
        android:id="@+id/tvStartDescription"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/transform_your_life"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStartImage" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="209dp"
        android:layout_height="58dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/playfairdisplayblack"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/already_have_an_account"
        android:textColor="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/playfairdisplayblack"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLogin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="273dp"
        android:layout_height="66dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/start_your_path_to_a_new_diet_with_this_simple_to_use_healthy_recipe_app"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>