<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EditProfileActivity">


    <ImageView
        android:id="@+id/ivAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="62dp"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="63dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="211dp"
        android:ems="10"
        android:hint="@string/add_age"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="119dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="336dp"
        android:ems="10"
        android:hint="@string/add_weight"
        android:inputType="number"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="370dp" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="106dp"
        android:layout_marginBottom="276dp"
        android:ems="10"
        android:hint="@string/add_height"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="435dp" />

    <EditText
        android:id="@+id/etDiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="106dp"
        android:layout_marginBottom="212dp"
        android:ems="10"
        android:hint="@string/add_diet"
        android:inputType="text"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="503dp" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="139dp"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="574dp" />

</RelativeLayout>